# ptts

./: .gitignore  README.md  pockettts.py  pyproject.toml
macos/ptts-menubar/: Info.plist  README.md  build.sh
macos/ptts-menubar/src/: main.swift
ptts/: chunk.py  clean.py  cli.py  epub.py  manifest.py  merge.py  package.py  player.py  preview.py  sanitize.py  text.py  tts.py  voice.py
ptts/templates/: player.html  preview.html  sanitize-rules.json
tests/: test_cli.py  test_epub.py  test_merge.py  test_player.py  test_sanitize.py  test_text.py  test_tts.py
