[project]
name = "ptts"
version = "0.1.0"
description = "EPUB to M4B pipeline using Pocket-TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "ebooklib>=0.18",
  "fastapi>=0.110",
  "jinja2>=3.1",
  "lxml>=5.0",
  "python-multipart>=0.0.9",
  "pytest>=7.4",
  "rich>=13.7",
  "uvicorn>=0.27",
]

[project.scripts]
ptts = "ptts.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ptts"]
